--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <a href="https://github.com/Cmmitchem/InstaGithub">Mock Instagram</a>
                 <div></div>
                 <a href="https://github.com/Cmmitchem/twitterApp">Mock Twitter</a>
-                
+                </div>
             
             <!--
             <div class="projsection"><h3 class="proname">Web Development</h3></div>
