changes to css files- changing color combinations

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <img src="./Caroline-Photo.JPG" width="210px" height="290px" class="center">
     <div></div>
     <div class="intro">
+        <h2>About</h2>
     <p>Hi, I'm Caroline Mitchem and I am currently a 
         student studying Business Information Systems 
         with a minor in Computer Science and FinTech at 
@@ -106,6 +107,8 @@
                 <div class="card"><p class="apps">Personal Website</p>
                 <p class="proinfo">a paragraph </p> </div>
                 -->
+                <div></div>
+                <div></div>
             <div class="experience"> <h2> Experience</h2>
                 <div class="ex"><h4 class="company">Mutliverso - Florence, Italy</h4>
                     <p class="role">Business Analyst Intern June 2022 - July 2022</p>
@@ -151,7 +154,7 @@
                  the TCU student body</p>
        </div>
             </div>
-           <div class="contact"> <h3 class= "cname"> Contact Me </h3> 
+           <div class="contact"> <h3 class= "cname"> Contact </h3> 
             <p class="cinfo">(+1) 404-277-4715</p>
             <p class="cinfo">carolinemmitchem@gmail.com | c.m.mitchem@tcu.edu</p>
             <a href="https://www.linkedin.com/in/caroline-mitchem">LinkedIn</a>
